# sugar-lane

./: README.md  common_issues.md  storage_mounting.md
.github/workflows/: switches_build.yaml
applications/argocd/: README.md
applications/plex/: deployment.yaml  mediaAndConfigVolume.yaml  mediaAndConfigVolumeClaim.yaml  service.yaml
applications/switches/: Dockerfile  README.md  arguments.py  kasa_discovery.py  main.py  pyproject.toml
applications/switches/app/: arguments.py  deps.py  main.py
applications/switches/app/routers/: get_light_status.py  get_switch.py  health.py
applications/switches/deployments/: deployment.yaml  service.yaml
