[tool.poetry]
name = "Switches"
version = "0.0.1"
description = "Simple app to monitor and maintain smart switches"
authors = ["Vinayak Saxena <vinayak.saxena@uwaterloo.ca>"]
package-mode = false


[tool.poetry.dependencies]
python = "^3.11"
python-kasa = "^0.10.2"
fastapi = { version = "^0.135.1", extras = ["standard"] }

[tool.fastapi]
entrypoint = "app.main:app"